[build-system]
requires = ["setuptools_scm>=7.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."

[tool.black]
line-length = 120
exclude = "generated"
target-version = ['py39']

[tool.isort]
line_length = 120
skip = "generated"
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = "(generated|build)/"

[tool.pytest.ini_options]
testpaths = ["tests/integration", "tests/unit"]

[tool.pylint.master]
fail-under=8.5

# allow single-letter names
variable-rgx="[a-z_][a-z0-9_]{0,30}$"
argument-rgx="[a-z_][a-z0-9_]{0,30}$"
attr-rgx="[a-z_][a-z0-9_]{0,30}$"
attribute-rgx="[a-z_][a-z0-9_]{0,30}$"
class-attribute-rgx="([A-Za-z_][A-Za-z0-9_]{0,30}|(__.*__))$"

# don't consider import sections nor method signatures as duplicates
ignore-imports=true
ignore-signatures=true

# SDK provides dataclasses with multiple attributes and multiple constructor arguments and this should not be reported
max-attributes = 30
max-args = 30

# disable typecheck for protobuf dynamic classes (no-member errors)
[tool.pylint.typecheck]
ignored-classes="Test"

[tool.pylint.message_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "print-statement",
    "parameter-unpacking",
    "unpacking-in-except",
    "old-raise-syntax",
    "backtick",
    "long-suffix",
    "old-ne-operator",
    "old-octal-literal",
    "import-star-module-level",
    "non-ascii-bytes-literal",
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "apply-builtin",
    "basestring-builtin",
    "buffer-builtin",
    "cmp-builtin",
    "coerce-builtin",
    "execfile-builtin",
    "file-builtin",
    "long-builtin",
    "raw_input-builtin",
    "reduce-builtin",
    "standarderror-builtin",
    "unicode-builtin",
    "xrange-builtin",
    "coerce-method",
    "delslice-method",
    "getslice-method",
    "setslice-method",
    "no-absolute-import",
    "old-division",
    "dict-iter-method",
    "dict-view-method",
    "next-method-called",
    "metaclass-assignment",
    "indexing-exception",
    "raising-string",
    "reload-builtin",
    "oct-method",
    "hex-method",
    "nonzero-method",
    "cmp-method",
    "input-builtin",
    "round-builtin",
    "intern-builtin",
    "unichr-builtin",
    "map-builtin-not-iterating",
    "zip-builtin-not-iterating",
    "range-builtin-not-iterating",
    "filter-builtin-not-iterating",
    "using-cmp-argument",
    "eq-without-hash",
    "div-method",
    "idiv-method",
    "rdiv-method",
    "exception-message-attribute",
    "invalid-str-codec",
    "sys-max-int",
    "bad-python3-import",
    "deprecated-string-function",
    "deprecated-str-translate-call",
    "deprecated-itertools-function",
    "deprecated-types-field",
    "next-method-defined",
    "dict-items-not-iterating",
    "dict-keys-not-iterating",
    "dict-values-not-iterating",
    "deprecated-operator-function",
    "deprecated-urllib-function",
    "xreadlines-attribute",
    "deprecated-sys-function",
    "exception-escape",
    "comprehension-escape"
]

[flake8]
max-line-length = 120
extend-ignore = """
    E203,
    E402,
    E501,
    E712,
    E741,
    F401,
    F403,
    F405,
    F541,
"""